[package]
name = "redseat_plugin_torbox"
version = "0.3.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
serde = { version = "1", features = ["derive"] }
rs-plugin-common-interfaces = "0.20.7"
strum = "0.26.2"
strum_macros = "0.26.2"
urlencoding = "2.1.3"
